fix: table content overflow wrapper bloc

--- a/src/layouts/components/Notification/Notification.module.scss
+++ b/src/layouts/components/Notification/Notification.module.scss
@@ -197,13 +197,13 @@
     padding: 0.5rem;
     background-color: var(--secondary-color);
     border-radius: 0.5rem;
-    max-width: 100%;
 }
 
 .notification-voucher-link {
     display: flex;
     align-items: center;
     gap: 1rem;
+    text-overflow: ellipsis;
 }
 
 .notification-voucher-image {
@@ -221,7 +221,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
-    flex: 1;
 }
 
 .voucher-notification-content-code {
